--- a/LAB/list.html
+++ b/LAB/list.html
@@ -6,8 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="http://www.emranhss.com" target="_blank"> wiebe emranhss.com </a><br>
-    <a href="http://www.facebook.com">wiebe facebook.com </a>
-    
+    <ol>
+        <li>
+            sanaullah
+        </li>
+        <li>sifaullah</li>
+        <li>samiullah</li>
+        <li>hasan</li>
+        <li>mahim</li>
+    </ol>
 </body>
 </html>
