--- a/try/home.html
+++ b/try/home.html
@@ -6,8 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="http://www.emranhss.com" target="_blank"> wiebe emranhss.com </a><br>
-    <a href="http://www.facebook.com">wiebe facebook.com </a>
-    
+    <a href="sanaullah.html">sanaullah</a><br>
+    <a href="list.html">list</a>
+    <a href="emran Hassaim">sir</a><br>
+    <a href="anchor.html">anchor</a>
 </body>
 </html>
