--- a/Bootstrap/bootrstape-Lab/index.html
+++ b/Bootstrap/bootrstape-Lab/index.html
@@ -23,7 +23,7 @@
                 <a class="nav-link" target="contect" href="About.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
+                <a class="nav-link" target="contect" href="table.html">Table</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link disabled" aria-disabled="true">Disabled</a>
