--- a/Exam/tabul.html
+++ b/Exam/tabul.html
@@ -6,48 +6,23 @@
     <title>Document</title>
 </head>
 <body>
-    <fieldset>
-        <legend>Table Data</legend>
-        <form action="">
-            Student Name <br>
-            <input type="text"><br>
-            Student ID <br>
-            <input type="text"> <br>
-            DoB <br>
-            <input type="date"> <br>
-            Gendar <br>
-            <input type="radio" name="Gendar">Male
-            <input type="radio" name="Gendar">female
-            <input type="radio" name="Gendar">others <br>
-            Subject <br>
-            <select name="" id=""> <br>
-                <option value="">-Subject one-</option>
-                <option value="">Jss</option>
-                <option value="">GABE</option>
-                <option value="">C#</option> <br>
-
-
-
-
-
-
-            </select>
-            <textarea name="" id="" cols="30" rows="10"></textarea> <br>
-            <input type="submit"value="singup"> <br>
-            <input type="reset" value="reset">
-
-
-            
-
-
-
-
-
-
-        </form>
-
-
-    </fieldset>
-    
+    <table border="1" width="50%">
+        <tr>
+            <th>Name</th>
+            <th rowspan="4">Result</th>
+            <th>Class</th>
+            <th>Marks</th>
+        </tr>
+        <tr>
+            <td>Tanvir</td>
+            <td>X</td>
+            <td>80</td>
+        </tr>
+        <tr>
+            <td>Ayan</td>
+            <td>II</td>
+            <td>90</td>
+        </tr>
+    </table>
 </body>
 </html>
