--- a/Bootstrap/bootrstape-Lab/index.html
+++ b/Bootstrap/bootrstape-Lab/index.html
@@ -17,7 +17,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page"  target="contect" href="home.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" target="contect" href="About.html">About</a>
