--- a/LAYOUTE/layout.html
+++ b/LAYOUTE/layout.html
@@ -44,9 +44,9 @@
         
 
         #content{
-            height: 100vh;
+            height:100px;
 
-            width: 100%;
+            width:100%;
             background-color: rgb(196, 220, 255);
 
 
@@ -87,7 +87,7 @@
         </nav>
     </div>
     <div id="content">
-        <iframe src="" frameborder="0"name="content" width="100%"height="100%"></iframe>
+        <iframe src="" frameborder="0"name="content" style="height:100vh ; width: 100%;"></iframe>
     </div>
     <div id="footer">
 
