--- a/LAYOUTE/practice layoute.html
+++ b/LAYOUTE/practice layoute.html
@@ -69,8 +69,8 @@
     </nav>
    </div>
    <div id="Content">
-    <iframe src="" frameborder="0" name="content" width="100%"
-    height="100%"></iframe>
+    <iframe src="" frameborder="0" name="content" style="height: 100vh; width: 100%;"
+    ></iframe>
 
    </div>
    <div id="Footer">
