--- a/layoute/pactice-3.html
+++ b/layoute/pactice-3.html
@@ -64,7 +64,7 @@
     </div>
 
     <div id="content">
-        <iframe src="" frameborder="0" name="content" width="100%" height="100%"></iframe>
+        <iframe src="" frameborder="0" name="content" width="100%" height="100vh"></iframe>
 
     </div>
 
