--- a/Exam/menu.html
+++ b/Exam/menu.html
@@ -6,17 +6,16 @@
     <title>Document</title>
 </head>
 <body>
-    <div style="height: 100vh; width: 100%;"> 
+    <div style=" float: top; height:  100%; width:20vh;">
+       <a href="Student Rg.html" target="sana">Student</a> <br>
+       <a href="tabul.html" target="sana">Table</a>
         
-        <a href="Student Rg.html" target="sana"></a>
 
+    </div>
+    <div style=" float: lift; height: 100%; width: 100%;">
+        <iframe src="" frameborder="0" name="sana" style="height: 100%; width: 80vh;"></iframe>
+
+    </div>
     
-   
-        <a href="tabul.html"target="sana"></a>
-    </div>
-    <div id="sana">
-        <iframe src="" frameborder="0" name="sana" style="height: 100vh; width:100%;"></iframe>
-
-    </div>
 </body>
 </html>
