--- a/Bootstrap/bootstarp-home work/index.html
+++ b/Bootstrap/bootstarp-home work/index.html
@@ -20,10 +20,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="home.html" target="content">Home</a>
+                        <a class="nav-link active" aria-current="page" href="home.html" target="content"> <i class="fa-duotone fa-house"></i>Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
+                        <a class="nav-link" href="#"> <i class="fa-solid fa-house-blank"></i>Features</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Pricing</a>
