--- a/Exam Html/exam-1/meno.html
+++ b/Exam Html/exam-1/meno.html
@@ -6,38 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        table, td, th {
-          border: 1px solid;
+        table tr td {
+            border: 1px solid;
         }
-        
-        table {
-          width: 100%;
-          border-collapse: collapse;
+        table{
+            width: 100%;
+            border-collapse: collapse;
         }
-        </style><style>
-table, td, th {
-  border: 1px solid;
-}
+    </style>
 
-table {
-  width: 100%;
-  border-collapse: collapse;
-}
-</style>s
 </head>
 
 <body>
-    <table >
+    <table>
         <tr>
-            <div style=" float: left; height: 100%; width: 100vh;">
-                <a href="student.html" target="sana">Student</a> <br>
-                <a href="table.html" target="sana">table</a>
-            </div>
-        </tr>
-        <tr>
-            <div style=" float:right;">
-                <iframe src="" frameborder="0" name="sana" style="height: 100%; width: 100vh;"></iframe>
-            </div>
+            <td>
+                <div style=" float: left; height: 100vh; width: 20%;">
+                    <a href="student.html" target="sana">Student</a> <br>
+                    <a href="table.html" target="sana">table</a>
+                    <a href="CSS.html" target="sana">CSS</a>
+                </div>
+            </td>
+
+
+            <td>
+                <div style=" float:right; height: 100vh; width: 80%;">
+                    <iframe src="" frameborder="0" name="sana" style="height: 100%; width: 100%;"></iframe>
+                </div>
+            </td>
         </tr>
     </table>
 </body>
