--- a/Exam Html/exam-1/student.html
+++ b/Exam Html/exam-1/student.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        select{
+            color: rgb(0, 255, 76);
+        }
+    textarea{
+        background-color: aquamarine;
+    }
+    input[type=submit] {
+        background-color: darkgreen;
+    }
+    input[type=reset]{
+        background-color: brown;
+    }
+    </style>
 </head>
 <body>
     <form action="">
@@ -25,8 +39,12 @@
             <option value="">.net</option>
 
         </select> <br>
-        <input type="submit" value="subject"> <br>
+        Command <br>
+        <textarea name="" id="" cols="30" rows="3"></textarea> <br>
+        <div style="float: right; width: 90%;">
+        <input type="submit" value="submit"> 
         <input type="reset" value="reset">
+    </div>
 
     </form>
     
