--- a/Exam/menu.html
+++ b/Exam/menu.html
@@ -13,6 +13,11 @@
             width: 100%;
             border-collapse: collapse;
         }
+        a{
+            text-decoration: none;
+        }
+       
+       
     </style>
 </head>
 
@@ -23,6 +28,7 @@
                 <div style=" float: left; height:  100vh; width:20%;">
                     <a href="Student Rg.html" target="sana">Student</a> <br>
                     <a href="tabul.html" target="sana">Table</a>
+                    <a href="css.html" target="sana">CSS</a>
 
 
                 </div>
