--- a/Exam Html/Exam-3/meno.html
+++ b/Exam Html/Exam-3/meno.html
@@ -13,6 +13,9 @@
         width: 100%;
         border-collapse: collapse;
     }
+    a {
+       text-decoration: none;
+    }
     </style>
 </head>
 
