--- a/Exam/Student Rg.html
+++ b/Exam/Student Rg.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+   
+    </style>
+
 </head>
 
 <body>
@@ -14,21 +18,25 @@
         Round <br>
         <select name="" id="">
             <option value="">-Round-</option>
-           <option value="">55</option>
-           <option value="">56</option>
-           <option value="">57</option> <br>
+            <option value="">55</option>
+            <option value="">56</option>
+            <option value="">57</option> <br>
 
         </select>
         Gender <br>
-        <input type="radio"name="Gender">Male
-        <input type="radio"name="Gender">Female
-        <input type="radio"name="Gender">Others <br>
+        <input type="radio" name="Gender">Male
+        <input type="radio" name="Gender">Female
+        <input type="radio" name="Gender">Others <br>
         Education <br>
         <input type="checkbox">SSC
         <input type="checkbox">HSC <br>
-        <input type="submit" value="submit"> <br>
-        <input type="reset" value="reset">
-        
+        <img src="images/images.png" height="30px" alt="">
+
+        <div>
+            <input type="submit" value="submit"> <br>
+            <input type="reset" value="reset">
+        </div>
+
     </form>
 
 </body>
