--- a/bablu/table.html
+++ b/bablu/table.html
@@ -7,6 +7,11 @@
     <style>
         nav tr th{
             text-align: center;
+            border: px solid;
+        }
+        table{
+            width: 100%;
+            border-collapse: collapse;
         }
 
 
@@ -20,7 +25,7 @@
             <th rowspan="2">ID</th>
             <th rowspan="2">Name</th>
             <th rowspan="2">Round</th>
-            <th >Marck</th>
+            <th colspan="2">Marck</th>
         </tr>
         <tr>
             <td>MCQ</td>
@@ -40,7 +45,7 @@
             <td>34</td>
             <td>45</td>
         </tr>
-        <tr>*
+        <tr>
             <td>284150</td>
             <td>hasan</td>
             <td>59</td>
