--- a/exam.30/manu.html
+++ b/exam.30/manu.html
@@ -8,35 +8,56 @@
   <style>
     table tr td {
       border: 1px solid;
+
     }
+
     table {
       width: 100%;
       border-collapse: collapse;
     }
-
+    table tr td  {
+      text-align: center
+    }
   </style>
 </head>
 
 <body>
   <table>
     <tr>
+      <td>
+
+        <div style="float:; width:100%;height:90vh;">
+
+          <iframe src="" frameborder="0" name="sana" style="width:100%;height: 100%;">
+
+          </iframe>
+        </div>
+      </td>
+    </tr>
+
+
+
+
+
+
+
+
+
+
+
+
+
     <tr>
-      <div style="float:left;width: 20%;height: 100vh;">
-        <a href="tabul.html" target="sana">Tabul</a>
-        <a href="Form.html" target="sana">Form</a>
+      <td>
 
-      </div>
+        <div style="float; width: 100%;height: 10vh;">
+          <a href="tabul.html" target="sana">Tabul</a>
+          <a href="Form.html" target="sana">Form</a>
+
+        </div>
+      </td>
     </tr>
-    <td>
-
-      <div style="float:right; width:80%;height:100vh;">
-
-        <iframe src="" frameborder="0" name="sana" style="width:100%;height: 100vh;">
-
-        </iframe>
-      </div>
-    </td>
-    </tr>
+   
   </table>
 </body>
 
